update CMakeLists to include linking to shermes_console lib

--- a/src/bunny-mark/CMakeLists.txt
+++ b/src/bunny-mark/CMakeLists.txt
@@ -47,6 +47,6 @@ if(APPLE)
   configure_file("${CMAKE_CURRENT_SOURCE_DIR}/../../lib/macos/libGLESv2.dylib" "${CMAKE_BINARY_DIR}/bin/${CMAKE_CFG_INTDIR}/libGLESv2.dylib" COPYONLY)
   configure_file("${CMAKE_CURRENT_SOURCE_DIR}/../../lib/macos/libEGL.dylib" "${CMAKE_BINARY_DIR}/bin/${CMAKE_CFG_INTDIR}/libEGL.dylib" COPYONLY)
 else()
-  target_link_libraries(bunny-mark hermesvm raylib)
+  target_link_libraries(bunny-mark hermesvm shermes_console raylib)
   target_link_libraries(bunny-mark-c raylib)
 endif()
